// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/session getSessionStateFromLocalStorage when access_token does not exists in local storage 1`] = `
Object {
  "authenticated": false,
  "user": Object {},
}
`;

exports[`reducers/session getSessionStateFromLocalStorage when access_token exists in local storage 1`] = `
Object {
  "authenticated": true,
  "user": Object {
    "name": "Rune Storløpa",
  },
}
`;

exports[`reducers/session initialState when access_token exists in localstorage 1`] = `
Object {
  "authenticated": false,
  "user": Object {},
}
`;

exports[`reducers/session sets if authenticated 1`] = `
Object {
  "authenticated": true,
  "user": Object {},
}
`;

exports[`reducers/session sets if authenticated 2`] = `
Object {
  "authenticated": false,
  "user": Object {},
}
`;

exports[`reducers/session sets user data 1`] = `
Object {
  "authenticated": false,
  "user": Object {
    "name": "Ola Nordmann",
  },
}
`;
